# hello-python-pro

./: .env  .pre-commit-config.yaml  README.md  database.db  pyproject.toml
app/: crud.py  db.py  main.py  models.py
app/core/: config.py
app/routes/: users.py
app/schemas/: user.py
tests/: test_basic.py
